# majsoul-liqi-json

./: Dockerfile  README.md  parse.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
